--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -b",
+    "start": "node dist/index.js",
+    "dev": "npm run build && node start"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.3",
     "typescript": "^5.7.2"
   }
 }
